--- a/pivottable.css
+++ b/pivottable.css
@@ -23,8 +23,12 @@ table.pvtTable tbody tr th {
     /* Replaced #c8d4e3 */
     /* font-size: var(--p-datatable-font-size, 14px); */
     font-size: 1rem;
-    padding: 0.2rem 0.4rem;
+    padding: 0.2rem 0.1rem;
     /* Replaced 5px */
+}
+
+td.pvtOutput > table > thead > tr:not(:first-child) th{
+    font-size: 0.8rem;
 }
 
 table.pvtTable tbody tr:hover td {
