--- a/pivottable.css
+++ b/pivottable.css
@@ -1,3 +1,14 @@
+
+* {
+    box-sizing: border-box
+}
+
+.pvtUi {
+    width: 100%;
+    color: #2a3f5f;
+    font-family: Verdana;
+    border-collapse: collapse;
+}
 .pvtUi select {
     user-select: none;
     -webkit-user-select: none;
@@ -6,79 +17,54 @@
     -ms-user-select: none;
 }
 
+.pvtUi td.pvtOutput {
+    padding: 6px;
+    vertical-align: top;
+    border: 1px solid #a2b1c6;
+}
 
 table.pvtTable {
+    font-size: 8pt;
     text-align: left;
     border-collapse: collapse;
-    width: 100%;
-    /* font-family: inherit; */
-    /* Inherit font from PrimeVue */
+    font-family: Verdana;
 }
 
 table.pvtTable thead tr th,
 table.pvtTable tbody tr th {
-    background-color: var(--p-navigation-item-active-background) !important;
-    /* Replaced #ebf0f8 */
-    border: 1px solid var(--p-datatable-header-cell-border-color);
-    /* Replaced #c8d4e3 */
-    /* font-size: var(--p-datatable-font-size, 14px); */
-    font-size: 0.9rem;
-    padding: 0.2rem 0.1rem;
-    /* Replaced 5px */
+    background-color: #ebf0f8;
+    border: 1px solid #c8d4e3;
+    font-size: 8pt;
+    padding: 5px;
 }
-
-td.pvtOutput > table > thead > tr:not(:first-child) th{
-    font-size: 0.7rem;
-}
-
-table.pvtTable tbody tr:hover td {
-    background-color: var(--p-surface-700);
-}
-
 
 table.pvtTable .pvtColLabel {
     text-align: center;
 }
-
 table.pvtTable .pvtTotalLabel {
     text-align: right;
 }
 
 table.pvtTable tbody tr td {
-    font-size: 1rem !important;
-    padding: 0.2rem 0.8rem !important;
-    color: var(--p-datatable-row-color);
-    /* Replaced #2a3f5f */
-    /* padding: var(--p-datatable-body-cell-padding); */
-    /* Replaced 3px */
-    background-color: var(--p-datatable-row-background);
-    /* Replaced #fff */
-    border: 1px solid var(--p-datatable-border-color);
-    /* Uncomment if needed */
+    color: #2a3f5f;
+    padding: 3px;
+    background-color: #fff;
+    border: 1px solid #c8d4e3;
     vertical-align: top;
     text-align: right;
 }
 
-/* total row */
 .pvtTotal,
 .pvtGrandTotal {
     font-weight: bold;
-    background-color: var(--p-primary-200) !important;
-    /* opacity: var(--p-disabled-opacity) !important; */
 }
-
-/* Dark mode styles */
-html.dark .pvtTotal,
-html.dark .pvtGrandTotal {
-    background-color: var(--p-primary-900) !important;
-    /* Adjust this to a suitable color for dark mode */
-}
-
 
 .pvtRowOrder,
 .pvtColOrder {
     cursor: pointer;
-    /* width: 15px; */
+    width: 15px;
+    margin-left: 5px;
+    display: inline-block;
     user-select: none;
     text-decoration: none !important;
     -webkit-user-select: none;
@@ -89,44 +75,35 @@ html.dark .pvtGrandTotal {
 
 .pvtAxisContainer,
 .pvtVals {
-    border: 1px solid var(--p-datatable-border-color);
-    /* border: 1px solid var(--p-list-option-icon-color); */
-    /* border: 1px solid #636363; */
-    /* Replaced #a2b1c6 */
-    background: var(--p-datatable-row-background);
-    /* Replaced #fff */
-    /* padding: var(--p-datatable-header-padding); */
-    padding: 0.5rem;
-    /* Replaced 5px */
-    /* min-width: 20px; */
-    /* min-height: 20px; */
+    border: 1px solid #a2b1c6;
+    background: #fff;
+    padding: 5px;
+    min-width: 20px;
+    min-height: 20px;
 }
-
+.pvtVals.pvtText {
+    vertical-align: middle;
+    font-size: 15px;
+    font-weight: bold;
+    color: #000000;
+    user-select: none;
+    padding-left: 16px;
+    text-align: start;
+}
 
 .pvtRenderers {
-    background-color: var(--p-surface-0) !important;
-    border: 1px solid var(--p-datatable-border-color);
-    /* Replaced #a2b1c6 */
+    border: 1px solid #a2b1c6;
     user-select: none;
-    width: 16rem;
 }
-
-/* Dark mode styles */
-html.dark .pvtRenderers {
-    background-color: var(--p-surface-900) !important;
-    width: 16rem;
-}
-
 
 .pvtDropdown {
-    border: 1px solid var(--p-datatable-border-color);
-    /* Replaced #a2b1c6 */
+    border: 1px solid #a2b1c6;
     align-items: center;
     display: block;
     background-color: transparent;
     background-image: none;
-    border-radius: 0;
-    padding: 0 0 0 3px;
+    border-radius: 0px;
+    padding: 0px 0px 0px 3px;
     height: 40px;
     font-size: 15px;
     font-weight: bold;
@@ -141,10 +118,24 @@ html.dark .pvtRenderers {
 }
 
 .pvtRenderers .pvtDropdown {
-    padding: 0 0 0 12px;
+    padding: 0px 0px 0px 12px;
     border: none;
     width: 100%;
-    margin: 0;
+    margin: 0px;
+}
+
+.pvtDropdown:last-child {
+    margin-bottom: 0px;
+}
+
+.pvtVals {
+    white-space: nowrap;
+    vertical-align: top;
+    padding-bottom: 12px;
+}
+
+.pvtRows {
+    height: 35px;
 }
 
 .pvtAxisContainer li {
@@ -152,17 +143,25 @@ html.dark .pvtRenderers {
     list-style-type: none;
     cursor: move;
 }
-
-
+.pvtAxisContainer li.pvtPlaceholder {
+    -webkit-border-radius: 5px;
+    padding: 3px 15px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    border: 1px dashed #a2b1c6;
+}
+.pvtAxisContainer li.pvtPlaceholder span.pvtAttr {
+    display: none;
+}
 
 .pvtAxisContainer li span.pvtAttr {
     -webkit-text-size-adjust: 100%;
-    background: var(--p-datatable-header-cell-background);
-    /* Replaced #f3f6fa */
-    border: 2px dashed var(--p-datatable-border-color);
-    /* Replaced #c8d4e3 */
-    padding: 8px 12px;
+    background: #f3f6fa;
+    border: 2px dashed #c8d4e3;
+    padding: 4px 7px;
     white-space: nowrap;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     border-radius: 5px;
     user-select: none;
     -webkit-user-select: none;
@@ -170,72 +169,94 @@ html.dark .pvtRenderers {
     -khtml-user-select: none;
     -ms-user-select: none;
 }
-
-
+.pvtAxisContainer li span.pvtAttr.sortonly {
+    border: 1px solid #c8d4e3;
+}
+.pvtAxisContainer li span.pvtAttr.disabled {
+    border: 1px solid #c8d4e3;
+    color: #c5c5c5;
+    cursor: not-allowed;
+}
 .pvtTriangle {
     cursor: pointer;
-    color: var(--p-button-primary-background);
-    /* No exact variable, kept as is */
+    color: #506784;
 }
 
 .pvtHorizList li {
     display: inline-block;
 }
-
 .pvtVertList {
     vertical-align: top;
 }
 
+.pvtFilteredAttribute {
+    font-style: italic;
+}
+
+.sortable-chosen .pvtFilterBox {
+    display: none !important;
+}
+
+.pvtFilterTextClear {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none !important;
+}
+
+/* .pvtDragHandle {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    font-size: 18px;
+    cursor: move;
+    color: #a2b1c6;
+} */
+
 .pvtButton {
     display: inline-block;
-    color: var(--p-datatable-row-color);
-    /* Replaced #506784 */
+    color: #506784;
     border-radius: 5px;
     padding: 3px 6px;
-    background: var(--p-datatable-row-background);
-    /* Replaced #fff */
-    border: 1px solid var(--p-datatable-border-color);
-    /* Replaced #c8d4e3 */
+    background: #fff;
+    border: 1px solid;
+    border-color: #c8d4e3;
     font-size: 14px;
-    margin: 3px 3px 6px 0;
+    margin: 3px 3px 6px 0px;
     transition: 0.34s all cubic-bezier(0.19, 1, 0.22, 1);
     text-decoration: none !important;
 }
 
 .pvtButton:hover {
-    background: var(--p-datatable-row-hover-background);
-    /* Closest match for hover background */
-    border-color: var(--p-datatable-border-color);
-    /* Replaced #a2b1c6 */
+    background: #e2e8f0;
+    border-color: #a2b1c6;
 }
 
 .pvtButton:active {
-    background: var(--p-datatable-row-selected-background);
-    /* Closest match for active background */
+    background: #d1dae6;
 }
 
 .pvtFilterBox input {
-    border: 1px solid var(--p-datatable-body-cell-border-color);
-    /* Replaced #c8d4e3 */
+    border: 1px solid #c8d4e3;
     border-radius: 5px;
-    color: var(--p-datatable-row-color);
-    /* Replaced #506784 */
+    color: #506784;
     padding: 0 3px;
     font-size: 14px;
 }
 
 .pvtFilterBox input:focus {
-    border-color: var(--p-datatable-row-focus-ring-color);
-    /* Closest match */
+    border-color: #119dff;
     outline: none;
 }
 
 .pvtFilterBox {
     z-index: 100;
-    border: 1px solid var(--p-datatable-border-color);
-    /* Replaced #506784 */
-    background-color: var(--p-datatable-row-background);
-    /* Replaced #fff */
+    border: 1px solid #506784;
+    max-width: 600px;
+    min-width: 210px;
+    background-color: #fff;
     position: absolute;
     padding: 6px;
     user-select: none;
@@ -248,9 +269,8 @@ html.dark .pvtRenderers {
 
 .pvtFilterBox input[type='text'] {
     display: block;
-    /* width: 100%; */
-    color: var(--p-datatable-row-color);
-    /* Replaced #2a3f5f */
+    width: 100%;
+    color: #2a3f5f;
     margin-bottom: 5px;
     padding: 6px;
     /* border-radius: 4px; */
@@ -267,8 +287,7 @@ html.dark .pvtRenderers {
     overflow-y: scroll;
     width: 100%;
     max-height: 30vh;
-    border-top: 1px solid var(--p-datatable-border-color);
-    /* Replaced #dfe8f3 */
+    border-top: 1px solid #dfe8f3;
 }
 
 .pvtCheckContainer p {
@@ -279,17 +298,10 @@ html.dark .pvtRenderers {
 }
 
 .pvtCheckContainer p.selected {
-    background: var(--p-datatable-header-cell-background);
-    /* Replaced #ebf0f8 */
+    background: #ebf0f8;
     min-width: 100%;
     width: max-content;
 }
-
-.pvtCheckContainer p.selected input {
-    margin-right: 0.5rem;
-}
-
-
 
 .pvtOnly {
     display: none;
@@ -309,7 +321,6 @@ html.dark .pvtRenderers {
 .pvtCheckContainer p:hover .pvtOnly {
     display: block;
 }
-
 .pvtCheckContainer p:hover .pvtOnlySpacer {
     display: none;
 }
